2006-05-09  Bernhard Held <bernhard AT bernhardheld.de>

	* components/sdcc-extra.mk (sdcc-extra): sdcc-extra now needs configuring

2006-05-06 Borut Razem <borut.razem AT siol.net>

	* lib/doc-archive.mk: get sdcc_theme_navbar.html from $(_DOC_ARCHIVE_SUPPORT_DIR)
	* support/sdcc_theme.pl: added svn:executable property, ...
	* support/sdcc_theme_navbar.html: added
	* README: added desctiption of the tmp directory
	* lib/bootstrap.mk, lib/doc-archive.mk, lib/src-archive.mk, lib/variables.mk:
	  definition of BUILDDATE moved to variables.mk
	* sdcc-build-bootstrap.sh: make $EXTRATARGETS after crontab-spawn

2006-05-05 Borut Razem <borut.razem AT siol.net>

	* Makefile: include lib/doc-archive.mk
	* lib/doc-archive.mk, support/sdcc_theme.pl: added

2006-05-02 Borut Razem <borut.razem AT siol.net>

	* local/amd64-linux1.mk: added SDCCCONFIGUREFLAGS = --enable-doc
	  to configure the doc Makefile and OPT_ENABLE_DOC = 1 to run the
	  doc Makefile

2006-05-01  Bernhard Held <bernhard AT bernhardheld.de>

	* lib/bootstrap.mk (generate-setup): fixed another directory

2006-04-29  Bernhard Held <bernhard AT bernhardheld.de>

	* components/sdcc.mk (sdcc-docs): fixed install directory for docs,
	(sdcc-fromhost-install): fixed new install paths

2006-04-28  Bernhard Held <bernhard AT bernhardheld.de>

	* components/sdcc.mk (sdcc-docs): create doc dir, it's no longer
	created by 'make install' unless --enable-doc is configured
	(install): use DESTDIR instead of tweaking
	suffic, docdir and datadir
	* lib/bootstrap (generate-setup): files are installed in
	$(BUILDIR)/[prefix|datadir|docdir] =
	$(HOME)/build/sdcc-build/build/i586-mingw32msvc/sdcc/sdcc/*
	The first /sdcc/ is from BUILDDIR, the 2nd from [prefix|...].
	* local/x86-linux1-i586-mingw32msvc.mk,
	* local/x86-linux2-i586-mingw32msvc.mk,
	* local/saturn.juju.net.nz-i386-mingw32msvc.mk: SDCCINSTALLFLAGS are
	no longer needed to tweak install directories

2006-04-24  Bernhard Held <bernhard AT bernhardheld.de>
